[package]
name = "game_dev_experiments"
version = "0.1.0"
authors = [
    "pshegger <pshegger@gmail.com>"
]

[[bin]]
name = "simple_balls"
path = "src/simple_balls.rs"

[[bin]]
name = "bouncing_balls"
path = "src/bouncing_balls.rs"

[[bin]]
name = "sprite_sheet"
path = "src/sprite_sheet.rs"

[[bin]]
name = "sprite_animation"
path = "src/sprite_animation.rs"

[dependencies]
piston_window = "0.112.0"
piston = "0.52.0"
rand = "0.7.3"
find_folder = "0.3.0"
serde = { version = "1.0.117", features = ["derive"] }
quick-xml = { version = "0.20.0", features = ["serialize"] }